# stock_predict_api

./: .env.example  .gitmodules  Dockerfile  docker-compose.yml  pyproject.toml  test_buy_signal.json  test_sell_signal.json
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  history.py  order.py  predict.py  price.py  report.py  stocks.py  strategy.py  td_position.py  users.py
app/config/: __init__.py  db_connections.py  kafka_connections.py  settings.py
app/core/: cache.py  enums.py  permissions.py  security.py
app/handler/: asking_price_handler.py  candle_handler.py  daily_strategy_handler.py  order_result_handler.py  order_signal_hanlder.py  price_handler.py
app/kafka/: asking_price_consumer.py  daily_strategy_consumer.py  order_signal_consumer.py  price_consumer.py  producer.py  websocket_command_consumer.py
app/repositories/: account_repository.py  candle_repository.py  predict_repository.py  stock_repository.py  strategy_repository.py  user_repository.py
app/schemas/: asking_price.py  auth.py  daily_strategy.py  history.py  manual_sell.py  order_signal.py  predict.py  price.py  report.py  stocks.py  td_position.py  users.py
app/services/: account_service.py  asking_price_cache.py  candle_service.py  history_sevice.py  kis_service.py  predict_service.py  price_cache.py  stock_service.py  strategy_service.py  user_service.py
app/utils/: market_time.py  rate_limiter.py
test/: test.py
